--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,23 +25,73 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sum"
+                android:text="Native"
                 android:id="@+id/button"
                 android:layout_alignParentStart="true"
                 android:onClick="buttonOnCLick" />
 
-            <TextView
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Result"
-                android:id="@+id/result"
-                android:layout_below="@+id/button"
-                android:layout_alignParentStart="true"
-                android:visibility="visible" />
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editSampRate"
+                android:text="44100" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:ems="10"
+                android:id="@+id/editBufSize"
+                android:layout_weight="1"
+                android:text="1024" />
+
         </LinearLayout>
 
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            android:layout_weight="1" />
+
         <include layout="@layout/scatter_plot" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Result"
+            android:id="@+id/result"
+            android:layout_below="@+id/button"
+            android:layout_alignParentStart="true"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="show"
+                android:id="@+id/button_show"
+                android:onClick="button2OnCLick"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Listen"
+                android:id="@+id/button3"
+                android:onClick="listenButtonOnCLick" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Button"
+                android:id="@+id/button4" />
+        </LinearLayout>
     </LinearLayout>
 
 
