--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -67,6 +67,16 @@
             android:layout_alignParentStart="true"
             android:visibility="visible" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="micResult"
+            android:id="@+id/micResult"
+            android:layout_below="@+id/button"
+            android:layout_alignParentStart="true"
+            android:visibility="visible" />
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
