rm: useless buttons

--- a/app/src/main/res/layout/activity_pitch.xml
+++ b/app/src/main/res/layout/activity_pitch.xml
@@ -23,12 +23,13 @@
 
     <include layout="@layout/content_pitch" />
 
-    <android.support.design.widget.FloatingActionButton
+    <LinearLayout
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:orientation="horizontal">
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
