--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,7 +2,7 @@
 
     <SwitchPreference
         android:defaultValue="false"
-        android:key="show_mic_analizer_debug"
+        android:key="show_analyzer_debug"
         android:summary="@string/pref_description_debug"
         android:title="@string/pref_title_debug" />
 
