--- a/app/src/main/res/layout/content_pitch.xml
+++ b/app/src/main/res/layout/content_pitch.xml
@@ -31,52 +31,26 @@
 
         <include layout="@layout/scatter_plot" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Result"
-            android:id="@+id/result"
-            android:layout_below="@+id/button"
-            android:layout_alignParentStart="true"
-            android:visibility="visible" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="micResult"
-            android:id="@+id/micResult"
-            android:layout_below="@+id/button"
-            android:layout_alignParentStart="true"
-            android:visibility="visible" />
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/pitch_navigation">
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Native"
-                android:id="@+id/button"
+                android:id="@+id/native_button"
                 android:layout_alignParentStart="true"
-                android:onClick="buttonOnCLick" />
+                android:onClick="nativeButtonOnCLick" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="show"
-                android:id="@+id/button_show"
-                android:onClick="button2OnCLick"/>
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Listen"
-                android:id="@+id/button3"
-                android:onClick="listenButtonOnCLick" />
+                android:text="Record"
+                android:id="@+id/mic_button"
+                android:onClick="micButtonOnCLick" />
 
         </LinearLayout>
     </LinearLayout>
