--- a/app/src/main/res/layout/scatter_plot.xml
+++ b/app/src/main/res/layout/scatter_plot.xml
@@ -8,13 +8,15 @@
         android:id="@+id/plot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        ap:label="A Scatter Plot"
-        ap:rangeLabel="da"
-        ap:domainLabel="do"
+        ap:theme="@style/APDefacto"
+        ap:label="Pitch vizualization"
+        ap:labelTextColor="#000000"
+        ap:rangeLabel="Pitch in Hz"
+        ap:domainLabel="Time in seconds"
         ap:borderColor="#000000"
-        ap:backgroundColor="#000000"
-        ap:graphBackgroundColor="#000000"
-        ap:gridBackgroundColor="#111111"
+        ap:backgroundColor="#00000000"
+        ap:graphBackgroundColor="#00000000"
+        ap:gridBackgroundColor="#00000000"
         ap:gridPaddingLeft="20dp"
         ap:gridPaddingRight="20dp"
         ap:gridPaddingTop="20dp"
@@ -26,9 +28,9 @@
         ap:graphMarginBottom="40dp"
         ap:graphMarginLeft="15dp"
         ap:graphMarginRight="10dp"
-        ap:graphDomainLineColor="#FFFFFF"
+        ap:graphDomainLineColor="#bfbfbf"
         ap:graphDomainLineThickness="1dp"
-        ap:graphRangeLineColor="#FFFFFF"
+        ap:graphRangeLineColor="#bfbfbf"
         ap:graphRangeLineThickness="1dp"
         ap:rangeTickLabelTextSize="15sp"
         ap:rangeOriginTickLabelTextSize="15sp"
