--- a/app/src/main/res/xml/line_point_formatter_with_labels_2.xml
+++ b/app/src/main/res/xml/line_point_formatter_with_labels_2.xml
@@ -2,7 +2,7 @@
 <config
     linePaint.strokeWidth="5dp"
     linePaint.color="#0000AA"
-    vertexPaint.strokeWidth="20dp"
+    vertexPaint.strokeWidth="6dp"
     vertexPaint.color="#000099"
     fillPaint.color="#00000000"
-    pointLabelFormatter.textPaint.color="#FFFFFF"/>
+    pointLabelFormatter.textPaint.color="#00000000" />
